# excel_summary

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  example.env  pyproject.toml
scripts/: start.sh
src/: manage.py  schema.yml
src/apps/parser/: file_utils.py  views.py
src/excel_summary/: asgi.py  serializers.py  settings.py  urls.py  validators.py  wsgi.py
